Auth Service finished fully
